# nb-cli

./: Cargo.toml  README.md  mod.rs  notes.txt
src/: api.rs  main.rs  mod.rs
src/enums/: commands.rs
src/types/: channel.rs  message.rs  mod.rs  settings.rs
