[package]
name = "notebroocli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json="1.0.128"
serde = {version = "1.0.209", features = ["derive"]}
clap = { version = "4.5.17", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
